--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Custom cursor -->
     <div class="cursor">
-        <div class="cursorCircle cursorXL">
+        <div class="cursorCircle cursorXL ">
             <svg height="30" width="30">
                 <circle cx="15" cy="15" r="12" stroke-width="0"></circle>
             </svg>
@@ -57,7 +57,7 @@
         <div class="container" id="navInfo">
             <div id="navName">
                 <img src="./images/logo.png" alt="website logo">
-                <h1>Brian langley</h1>
+                <h1>Bri<span id="startMouse"></span>an langley</h1>
             </div>
             <div id="navInfo-social">
                 <a href="https://www.linkedin.com/in/bel97/" target="_blank" class="hoverable">Linkedin</a>
