--- a/index.html
+++ b/index.html
@@ -67,14 +67,13 @@
         </div>
         <!-- Links container -->
         <div class="container" id="navPic">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Elon_Musk_Royal_Society_%28crop2%29.jpg"
-                alt="Your Image" style="width:500px">
+            <img src="" alt="Photo of myself" style="width:500px">
         </div>
     </section>
 
     <main>
         <!-- Home -->
-        <section id="home">
+        <section id="home" class="mainContent">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 offset-md-1">
@@ -85,7 +84,7 @@
         </section>
 
         <!-- About me -->
-        <section id="about">
+        <section id="about" class="mainContent">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 offset-md-1">
@@ -118,12 +117,6 @@
                                 projects.
                             </p>
                             <p class="mb-3 fs-5 fs-md-4 fs-lg-3">
-                                Additionally, my knowledge extends to backend technologies like PHP. Leveraging MySQL
-                                databases and PHP Data Objects (PDO) for efficient data management, enabling
-                                the development of robust and scalable web applications that effectively handle data and
-                                ensure smooth functionality.
-                            </p>
-                            <p class="mb-3 fs-5 fs-md-4 fs-lg-3">
                                 Beyond technical skills, I pride myself on my strong communication and teamwork
                                 abilities, enabling effective collaboration with colleagues and clients. I believe
                                 that my problem-solving mindset and attention to detail allows me to tackle unique
@@ -136,15 +129,14 @@
                 </div>
             </div>
         </section>
-
-
-
+        <canvas id="draw"></canvas>
     </main>
 
     <!-- Scripts -->
-    <script src="./js/nav.js"></script>
     <script src="./js/loader.js"></script>
+    <script src="./js/nav.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/spray.js"></script>
 </body>
 
 </html>
