--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/cyberpunk-css-main/cyberpunk.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
@@ -136,7 +137,7 @@
 
             <div class="row justify-content-center mt-5">
                 <div class="col-12 col-md-6 text-center">
-                    <h2 class="mainFont display-1 cyber-glitch-2">Projects</h2>
+                    <h2 class="mainFont display-1 cyber-glitch-2" id="project-title">Projects</h2>
                 </div>
             </div>
 
@@ -189,19 +190,19 @@
                         <h2 class="headers cyber-glitch-2">Lambiek: <span class="text-muted">Comiclopedia
                                 <small style="font-size: .5em;">v</small>2.0</span>
                         </h2>
-                        <p class="lead subFont">
-                            Inspired by platforms like Pinterest, Wanderlust is a photo liking application developed in
-                            vanilla JavaScript.
-                            It provides users with a visual journey through a collection of stunning photographs. Where
-                            they can browse
-                            through a diverse range of images, like their favorite photos, and store them as personal
-                            favorites.
+                        <p class="lead subFont mt-4">
+                            Undertaken by a group of
+                            enthusiastic students from the Bit Academy. The team embarked on a mission to revitalize
+                            and enhance the existing Lambiek.net Comic Wikipedia, also known as the Comiclopedia.
+                            Creating a new and improved version of the
+                            Comiclopedia that incorporates modern technologies and innovative features to provide an
+                            even more comprehensive and engaging experience for users.
                         </p>
                     </div>
                 </div>
                 <div class="col-md-5 cyber-tile-big project">
                     <a href="https://github.com/brianlangley/Lambiek" target="_blank">
-                        <img class="img-fluid mx-auto cyber-glitch-0" src="./images/Lambiek.png"
+                        <img class="img-fluid mx-auto cyber-glitch-0" src="./images/Lambiek(1).gif"
                             alt="Lambiek Github Link">
                     </a>
                 </div>
