corrections to home

--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
     <main>
         <!-- Home -->
         <section id="home" class="mainContent">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
-                    <div class="col-12 offset-md-1">
-                        <h1 id="homeName" class="display-2">Brian<br>Langley</h1>
+                    <div class="col-12 col-md-10 offset-md-1 text-center">
+                        <h1 id="homeName">Brian<br>Langley</h1>
                     </div>
                 </div>
             </div>
         </section>
+
 
         <!-- About me -->
         <section id="about" class="mainContent">
