--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designing the Future | Brian Langley</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./images/favicon.gif" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -203,7 +205,7 @@
                 </div>
                 <div class="col-md-5 cyber-tile-big project">
                     <a href="https://github.com/brianlangley/Lambiek" target="_blank">
-                        <img class="img-fluid mx-auto cyber-glitch-0" src="./images/Lambiek(1).gif"
+                        <img class="img-fluid mx-auto cyber-glitch-0" src="./images/Lambiek.gif"
                             alt="Lambiek Github Link">
                     </a>
                 </div>
