classes and cleaning

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-5 cyber-tile-big project">
+                <div class="col-md-5 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/Wanderlust" target="_blank">
                         <img class="img-fluid mx-auto cyber-glitch-1" src="./images/Wanderlust.png"
                             alt="Wanderlust Github Link">
@@ -179,7 +179,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-5 order-md-1 cyber-tile-big project">
+                <div class="col-md-5 order-md-1 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/BitGreen" target="_blank">
                         <img class="img-fluid mx-auto cyber-glitch-1" src="./images/BitGreen.gif"
                             alt="Green screen Falling etherium coin Stock Videos by Vecteezy">
@@ -194,16 +194,15 @@
                                 <small style="font-size: .5em;">v</small>2.0</span>
                         </h2>
                         <p class="lead subFont mt-4">
-                            Undertaken by a group of
-                            enthusiastic students from the Bit Academy. The team embarked on a mission to revitalize
-                            and enhance the existing Lambiek.net Comic Wikipedia, also known as the Comiclopedia.
-                            Creating a new and improved version of the
-                            Comiclopedia that incorporates modern technologies and innovative features to provide an
-                            even more comprehensive and engaging experience for users.
+                            Undertaken by a group of enthusiastic students from the Bit Academy. The team embarked on a
+                            mission to revitalise and enhance the existing Lambiek.net Comic Wikipedia, also known as
+                            the Comiclopedia. Creating a new and improved version of the Comiclopedia that incorporates
+                            modern technologies and innovative features to provide an even more comprehensive and
+                            engaging experience for users.
                         </p>
                     </div>
                 </div>
-                <div class="col-md-5 cyber-tile-big project">
+                <div class="col-md-5 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/Lambiek" target="_blank">
                         <img class="img-fluid mx-auto cyber-glitch-0" src="./images/Lambiek.gif"
                             alt="Lambiek Github Link">
