--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
                 </div>
                 <div class="col-md-5 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/Wanderlust" target="_blank">
-                        <img class="img-fluid mx-auto cyber-glitch-1" src="./images/Wanderlust.png"
-                            alt="Wanderlust Github Link" loading="lazy">
-                    </a>
+                        <img class="img-fluid mx-auto cyber-glitch-1" src="./images/projects/Wanderlust.png"
+                            loading="lazy"></a>
                 </div>
             </article>
 
@@ -193,7 +192,7 @@
                 </div>
                 <div class="col-md-5 order-md-1 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/BitGreen" target="_blank">
-                        <img class="img-fluid mx-auto cyber-glitch-1" src="./images/BitGreen.gif"
+                        <img class="img-fluid mx-auto cyber-glitch-1" src="./images/projects/BitGreen.gif"
                             alt="Green screen Falling etherium coin Stock Videos by Vecteezy" loading="lazy">
                     </a>
                 </div>
@@ -216,7 +215,7 @@
                 </div>
                 <div class="col-md-5 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/Lambiek" target="_blank">
-                        <img class="img-fluid mx-auto cyber-glitch-0" src="./images/Lambiek.gif"
+                        <img class="img-fluid mx-auto cyber-glitch-0" src="./images/projects/Lambiek.gif"
                             alt="Lambiek Github Link" loading="lazy">
                     </a>
                 </div>
