--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 offset-md-1">
-                        <h2 class="display-5 pb-2 mainFont cyber-glitch-2">About me</h2>
+                        <h2 class="display-3 pb-2 mainFont cyber-glitch-2">About me</h2>
                         <div class="subFont" id="aboutMeText">
                             <p class="mb-3 fs-5 fs-md-4 fs-lg-3">Hello there! I'm Brian, a passionate 2nd-year
                                 software
@@ -156,7 +156,7 @@
 
             <div class="row justify-content-center mt-5">
                 <div class="col-12 col-md-6 text-center">
-                    <h2 class="mainFont display-1 cyber-glitch-2" id="project-title">Projects</h2>
+                    <h2 class="mainFont display-3 cyber-glitch-2" id="project-title">Projects</h2>
                 </div>
             </div>
 
@@ -225,6 +225,7 @@
                         </p>
                     </div>
                 </div>
+
                 <div class="col-md-5 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/Lambiek" target="_blank">
                         <img class="img-fluid mx-auto cyber-glitch-0" src="./images/projects/Lambiek.gif"
@@ -233,39 +234,85 @@
                 </div>
             </article>
 
+            <div id="githubLink" class="row justify-content-center mt-5">
+                <div class="col-md-6 text-center cyber-glitch-0">
+                    <a href="https://github.com/brianlangley" target="_blank">
+                        <button class="cyber-button-big btn-warning text-dark m-4 subFont" data-dashlane-label="true">
+                            Discover more
+                            <span class="glitchtext">Github_Profile</span>
+                        </button>
+                    </a>
+                </div>
+            </div>
+
         </section>
 
         <!-- Contact -->
         <section id="contact" class="container">
-            <!-- Contact me h1 -->
-            <div class="row justify-content-center mt-5">
-                <div class="col-12 col-md-6 text-center">
-                    <h2 class="mainFont display-1 cyber-glitch-2" id="contact-title">Contact</h2>
+            <h2 class="display-3 pb-2 mainFont cyber-glitch-2">Contact</h2>
+
+            <div class="mb-5 border border-3 border-light cyber-tile-big shadow-lg">
+                <div class="container-fluid py-5 d-flex flex-column align-items-center justify-content-center">
+
+                    <div class="col-md-7 col-lg-8">
+                        <h2 class="mb-3 mainFont">Contact Information</h2>
+                        <p class="lead subFont">
+                            Feel free to contact me with any questions or inquiries you may have. I am always open to
+                            discussing new projects, creative ideas, or opportunities to be part apart of.
+                        </p>
+
+                        <form class="needs-validation" novalidate="">
+
+                            <div class="row g-2">
+                                <div class="col-sm-6">
+                                    <input type="text" class="form-control subFont px-2" id="firstName"
+                                        placeholder="First name" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid first name is required.
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <input type="text" class="form-control subFont px-2" id="lastName"
+                                        placeholder="Last name" value="" required>
+                                    <div class="invalid-feedback">
+                                        Valid last name is required.
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
+                                    <div class="input-group has-validation">
+                                        <span class="input-group-text subFont border-right-0">@</span>
+                                        <input type="email" class="form-control subFont border-left-0" id="email"
+                                            placeholder="you@email.com" required>
+                                        <div class="invalid-feedback">
+                                            Your email is required.
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
+                                    <textarea class="form-control subFont px-2" id="message" rows="10"
+                                        placeholder="Write your message here..." style="min-height: 33vh;"
+                                        required></textarea>
+                                </div>
+
+                                <div class="text-center">
+                                    <button class="w-100 cyber-button-big bg-yellow text-dark m-4 subFont" type="submit"
+                                        style="max-width: 50vw;" onmouseover="this.classList.add('cyber-glitch-0')"
+                                        onmouseout="this.classList.remove('cyber-glitch-0')">
+                                        Send your message
+                                        <span class="glitchtext">Contact</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-            <form>
-                <div class="cyber-input">
-                    <input type="text" placeholder="Name" />
-                </div>
-
-                <div class="cyber-input">
-                    <input type="email" placeholder="Email" />
-                </div>
-
-                <div class="cyber-input">
-                    <textarea placeholder="Message"></textarea>
-                </div>
-
-                <button class="cyber-button bg-red fg-white" type="submit">
-                    Submit
-                </button>
-            </form>
         </section>
-
-
     </main>
 
-    <!-- Scripts -->
     <script src="./js/loader.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/main.js"></script>
