--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
         <!-- About me -->
-        <section id="about" class="mainContent">
+        <section id="about" class="">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 offset-md-1">
