--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 </head>
 
 <body>
-
     <!-- Custom cursor -->
     <div class="cursor">
         <div class="cursorCircle cursorXL ">
@@ -261,11 +260,11 @@
                             discussing new projects, creative ideas, or opportunities to be part apart of.
                         </p>
 
-                        <form class="needs-validation" novalidate="">
+                        <form class="needs-validation" action="./email.php" method="POST">
 
                             <div class="row g-2">
                                 <div class="col-sm-6">
-                                    <input type="text" class="form-control subFont px-2" id="firstName"
+                                    <input type="text" class="form-control subFont px-2" name="firstName" id="firstName"
                                         placeholder="First name" value="" required>
                                     <div class="invalid-feedback">
                                         Valid first name is required.
@@ -273,7 +272,7 @@
                                 </div>
 
                                 <div class="col-sm-6">
-                                    <input type="text" class="form-control subFont px-2" id="lastName"
+                                    <input type="text" class="form-control subFont px-2" name="lastName" id="lastName"
                                         placeholder="Last name" value="" required>
                                     <div class="invalid-feedback">
                                         Valid last name is required.
@@ -284,7 +283,7 @@
                                     <div class="input-group has-validation">
                                         <span class="input-group-text subFont border-right-0">@</span>
                                         <input type="email" class="form-control subFont border-left-0" id="email"
-                                            placeholder="you@email.com" required>
+                                            name="email" placeholder="you@email.com" required>
                                         <div class="invalid-feedback">
                                             Your email is required.
                                         </div>
@@ -293,18 +292,17 @@
 
                                 <div class="col-12">
                                     <textarea class="form-control subFont px-2" id="message" rows="10"
-                                        placeholder="Write your message here..." style="min-height: 33vh;"
-                                        required></textarea>
+                                        placeholder="Write your message here..." style="min-height: 33vh;" required
+                                        name="message"></textarea>
                                 </div>
 
+
                                 <div class="text-center">
-                                    <button class="w-100 cyber-button-big bg-yellow text-dark m-4 subFont" type="submit"
+                                    <input class="w-100 cyber-button-big bg-yellow text-dark m-4 subFont" type="submit"
                                         style="max-width: 50vw;" onmouseover="this.classList.add('cyber-glitch-0')"
-                                        onmouseout="this.classList.remove('cyber-glitch-0')">
-                                        Send your message
-                                        <span class="glitchtext">Contact</span>
-                                    </button>
+                                        onmouseout="this.classList.remove('cyber-glitch-0')"></input>
                                 </div>
+
                             </div>
                         </form>
                     </div>
