--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/cyberpunk-css-main/cyberpunk.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
@@ -77,7 +77,7 @@
 
 
     <main>
-        <!-- Home -->
+ 
         <section id="home" class="mainContent">
             <div class="container">
                 <div class="row">
@@ -88,8 +88,6 @@
             </div>
         </section>
 
-
-        <!-- About me -->
         <section id="about" class="">
             <div class="container-fluid">
                 <div class="row">
@@ -146,7 +144,6 @@
             </div>
         </section>
 
-        <!-- Projects -->
         <section id="projects" class="container">
 
             <div class="row justify-content-center mt-5">
@@ -242,14 +239,13 @@
 
         </section>
 
-        <!-- Contact -->
         <section id="contact" class="container">
             <h2 class="display-3 pb-2 mainFont cyber-glitch-2">Contact</h2>
 
             <div class="mb-5 border border-3 border-light cyber-tile-big shadow-lg">
                 <div class="container-fluid py-5 d-flex flex-column align-items-center justify-content-center">
-
                     <div class="col-md-7 col-lg-8">
+
                         <h2 class="mb-3 mainFont">Contact Information</h2>
                         <p class="lead subFont">
                             Feel free to contact me with any questions or inquiries you may have. I am always open to
@@ -259,6 +255,7 @@
                         <form class="needs-validation" action="./email.php" method="POST">
 
                             <div class="row g-2">
+
                                 <div class="col-sm-6">
                                     <input type="text" class="form-control subFont px-2" name="firstName" id="firstName"
                                         placeholder="First name" value="" required>
@@ -291,7 +288,9 @@
                                         placeholder="Write your message here..." style="min-height: 33vh;" required
                                         name="message"></textarea>
                                 </div>
+
                             </div>
+
                             <div class="text-center">
                                 <button type="submit" class="btn w-100 cyber-button bg-yellow text-dark m-4"
                                     style="max-width: 50vw;" onmouseover="this.classList.add('cyber-glitch-0')"
@@ -300,7 +299,9 @@
                                     <span class="glitchtext subFont">Contact</span>
                                 </button>
                             </div>
+
                         </form>
+
                     </div>
                 </div>
             </div>
@@ -311,7 +312,6 @@
     <script src="./js/nav.js"></script>
     <script src="./js/main.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
 
 </body>
 
