--- a/index.html
+++ b/index.html
@@ -27,54 +27,54 @@
 </head>
 
 <body>
-    <!-- Custom cursor -->
-    <div class="cursor">
-        <div class="cursorCircle cursorXL ">
-            <svg height="30" width="30">
-                <circle cx="15" cy="15" r="12" stroke-width="0"></circle>
-            </svg>
-        </div>
 
-        <div class="cursorCircle cursorSM">
-            <svg height="10" width="10">
-                <circle cx="5" cy="5" r="4" stroke-width="0"></circle>
-            </svg>
-        </div>
-    </div>
+    <head>
+        <div class="cursor">
+            <div class="cursorCircle cursorXL ">
+                <svg height="30" width="30">
+                    <circle cx="15" cy="15" r="12" stroke-width="0"></circle>
+                </svg>
+            </div>
 
-    <!-- Preloader -->
-    <div class="preloader-container">
-        <div class="sticker-animation">
-            <img src="./images/Hello_my_name_is_sticker.png" alt="Hello my name is sticker" id="loaderSticker"
-                class="animate__animated animate__fadeInDownBig">
-            <h1 class="preloader-text">Brian</h1>
-        </div>
-        <audio src="./sound/spray.mp3" autoplay></audio>
-    </div>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light align-items-center d-flex flex-row flex-nowrap" id="nav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#home" id="roles">Bit Academy Student</a>
-            <div class="d-flex flex-row gap-3" id="social-links">
-                <a class="hoverable btn-link" aria-label="Email Link" href="mailto:be.langley@icloud.com">
-                    <img src="./images/icons/email.png" alt="Email" class="social-icon">
-                </a>
-                <a class="hoverable btn-link" aria-label="Github Link" href="https://github.com/brianlangley"
-                    target="_blank">
-                    <img src="./images/icons/github.png" alt="GitHub" class="social-icon">
-                </a>
-                <a class="hoverable btn-link" aria-label="LinkedIn Link" href="https://www.linkedin.com/in/bel97/"
-                    target="_blank">
-                    <img src="./images/icons/linkedin.png" alt="LinkedIn" class="social-icon">
-                </a>
-                <a class="hoverable btn-link" aria-label="Download CV" href="./assets/CV Brian Langley.pdf" download>
-                    <img src="./images/icons/cv.png" alt="CV" class="social-icon">
-                </a>
+            <div class="cursorCircle cursorSM">
+                <svg height="10" width="10">
+                    <circle cx="5" cy="5" r="4" stroke-width="0"></circle>
+                </svg>
             </div>
         </div>
-    </nav>
 
+        <div class="preloader-container">
+            <div class="sticker-animation">
+                <img src="./images/Hello_my_name_is_sticker.png" alt="Hello my name is sticker" id="loaderSticker"
+                    class="animate__animated animate__fadeInDownBig">
+                <h1 class="preloader-text">Brian</h1>
+            </div>
+            <audio src="./sound/spray.mp3" autoplay></audio>
+        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light align-items-center d-flex flex-row flex-wrap" id="nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#home" id="roles">Bit Academy Student</a>
+                <div class="d-flex flex-row gap-3" id="social-links">
+                    <a class="hoverable btn-link" aria-label="Email Link" href="mailto:be.langley@icloud.com">
+                        <img src="./images/icons/email.png" alt="Email" class="social-icon">
+                    </a>
+                    <a class="hoverable btn-link" aria-label="Github Link" href="https://github.com/brianlangley"
+                        target="_blank">
+                        <img src="./images/icons/github.png" alt="GitHub" class="social-icon">
+                    </a>
+                    <a class="hoverable btn-link" aria-label="LinkedIn Link" href="https://www.linkedin.com/in/bel97/"
+                        target="_blank">
+                        <img src="./images/icons/linkedin.png" alt="LinkedIn" class="social-icon">
+                    </a>
+                    <a class="hoverable btn-link" aria-label="Download CV" href="./assets/CV Brian Langley.pdf"
+                        download>
+                        <img src="./images/icons/cv.png" alt="CV" class="social-icon">
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </head>
 
     <main>
 
@@ -172,7 +172,7 @@
                 <div class="col-md-5 cyber-tile-big project hoverable">
                     <a href="https://github.com/brianlangley/Wanderlust" target="_blank">
                         <img class="img-fluid mx-auto cyber-glitch-1" src="./images/projects/Wanderlust.png"
-                            loading="lazy"></a>
+                            loading="lazy" alt="Wanderlust Project"></a>
                 </div>
             </article>
 
