netlify form connection

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div id="githubLink" class="row justify-content-center mt-5">
                 <div class="col-md-6 text-center cyber-glitch-0">
                     <a href="https://github.com/brianlangley" target="_blank">
-                        <button class="cyber-button-big btn-warning text-dark m-4 subFont" data-dashlane-label="true">
+                        <button class="cyber-button-big btn-warning text-dark m-4 subFont">
                             Discover more
                             <span class="glitchtext">Github_Profile</span>
                         </button>
@@ -250,7 +250,7 @@
                             discussing new projects, creative ideas, or opportunities to be a part apart of.
                         </p>
 
-                        <form data-netlify="true" action="/" method="POST">
+                        <form name="contact" action="/" method="POST" netlify>
                             <input type="hidden" name="form-name" value="contact" />
 
                             <div class="row g-2">
